Simplified RocksDB configuration
Signed-off-by: Roman <4833306+Filter94@users.noreply.github.com>